--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="static\main.css">
     <meta charset="UTF-8">
@@ -7,20 +8,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div class="form">
-        <div class="title">Welcome</div>
-        <div class="input-container ic1">
-          <input id="Title" class="input" type="text" placeholder=" " />
-          <div class="cut"></div>
-          <label for="Title" class="placeholder">Title</label>
-        </div>
-        <div class="input-container ic2">
-          <input id="story" class="input" type="text" placeholder=" " />
-          <div class="cut"></div>
-          <label for="story" class="placeholder">Script</label>
-        </div>
-        <button type="text" class="submit">submit</button>
-      </div>
+
+        <form name="starter" action="{{url_for('home')}}" method="post">
+            <div class="title">Welcome</div>
+            <div class="input-container ic1">
+                <input id="Title" name="Title" class="input" type="text" placeholder=" " />
+                <div class="cut"></div>
+                <label for="Title" class="placeholder">Title</label>
+            </div>
+            <div class="input-container ic2">
+                <input id="story" name="story" class="input" type="text" placeholder=" " />
+                <div class="cut"></div>
+                <label for="story" class="placeholder">Script</label>
+            </div>
+            <button type="text" name="submit1" class="submit">submit</button>
+
+        </form>
+    </div>
 </body>
+
 </html>
