--- a/templates/editImage.html
+++ b/templates/editImage.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/After-Submit.css">
-    <title>Document</title>
+    <title>Edit - YouCreate</title>
 </head>
 <body>
     <div class="form ">
       <form>    
     <div class="title">Senetence</div>
     <div class="input-container">
-      <input id="Sentence-display" class="input" type="text" placeholder=" " />
+      <input id="Sentence-display" class="input" type="text" placeholder={{ paragraph }}/>
       <label for="Sentence-display" class="placeholder"></label>
       </div>
       <form class="function" >
