--- a/static/after-submit.css
+++ b/static/after-submit.css
@@ -1,18 +1,22 @@
 body {
     align-items: center;
-    background-color: #000;
+    background-color: white;
     display: flex;
     justify-content: center;
     height: 100vh;
   }
   
   .form {
+
     background-color: #15172b;
     border-radius: 20px;
     box-sizing: border-box;
-    height: 500px;
     padding: 20px;
-    width: 320px;
+    width: 500px;
+    position: relative;
+    top: -30%;
+    left: 35%;
+    margin-bottom: 60px;
   }
   
   .title {
@@ -21,6 +25,7 @@ body {
     font-size: 36px;
     font-weight: 600;
     margin-top: 30px;
+    margin-bottom: 30px;
   }
   
   .subtitle {
@@ -35,6 +40,7 @@ body {
     height: 50px;
     position: relative;
     width: 100%;
+    padding-right: 10px;
   }
   
   .ic1 {
@@ -114,11 +120,73 @@ body {
     font-size: 18px;
     height: 50px;
     margin-top: 38px;
+    outline: 0;
     text-align: center;
     width: 100%;
   }
   
   .submit:active {
     background-color: #06b;
+  }
+  .images-container
+  {
+    margin-top: 50px;
+    background-color: #303245;
+    border-radius: 10px;
+    display: flex;
+    width: 800px;
+    height: 300px;
+    position: relative;
+    right: 5%;
+  }
+
+  .indiviual-image
+  {
+    padding: 20px;
+    position: relative;
+    left: 10%;
+    top: 15%;
+    opacity: 0.6;
+  }
+  .final-image
+  {
+    border-radius: 20px;
+  }
+  .btn-container
+  {
+    display: flex;
+    padding: 10px;
+    position: relative;
+    top: 30%;
+    right: 40%;
+    background-color: #497aee;
+    opacity: 0.9;
+    border-radius: 20px;
+  }
+  .bottom-btn
+  {
+    width: 100px;
+    margin-right: 8px;
+    background-color: cornflowerblue;
+    border-radius: 20px;
+    font-weight: 600;
+    padding: 10px;
+  }
+  .function 
+  {
+    display: flex;
+    position: relative;
+    right: 10%;
+    margin-top: 20px;
+  }
+  .navigation
+  {
+    margin-top: 20px;
+    margin-right: 5px;
+    position: relative;
+    left: 60%;
+    font-size: 15px;
+    border-radius: 15px;
+    padding: 7px;
   }
   
