--- a/static/imgselect.css
+++ b/static/imgselect.css
@@ -68,6 +68,7 @@ img{
 input, button{
     height: 7vh;
     border-radius: 20px;
+    margin: 1vh;
     border-width: 0;
     font-size: larger;
     width: 45vh;
