--- a/templates/imageselect.html
+++ b/templates/imageselect.html
@@ -17,7 +17,7 @@
         <div class="main-content">
             <div class="top">
                 <div class="tops cur-line">
-                    <input type="text" class="cur" contenteditable="false" value="This is Current Sentence" />
+                    <textarea class="cur" contenteditable="false">{{paragraph}}</textarea>
                 </div>
                 <div class="tops upload">
                     <button><i class="fa fa-upload" aria-hidden="true"></i> Upload</button>
@@ -29,24 +29,24 @@
             <div class="center">
                 <div class="topimg">
                     <div class="grid-image">
-                        <img class="final-image" src="dummy.jpg" alt="" height="240px" width="360px" />
+                        <img class="final-image" src="{{img0}}" alt="" height="240px" width="360px" />
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" src="dummy.jpg" alt="" height="240px" width="360px" />
+                        <img class="final-image" src="{{img1}}" alt="" height="240px" width="360px" />
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" src="dummy.jpg" alt="" height="240px" width="360px"/>
+                        <img class="final-image" src="{{img2}}" alt="" height="240px" width="360px"/>
                     </div>
                 </div>
                 <div class="btmimg">
                     <div class="grid-image">
-                        <img class="final-image" src="dummy.jpg" alt="" height="240px" width="360px"/>
+                        <img class="final-image" src="{{img3}}" alt="" height="240px" width="360px"/>
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" src="dummy.jpg" alt="" height="240px" width="360px"/>
+                        <img class="final-image" src="{{img4}}" alt="" height="240px" width="360px"/>
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" src="dummy.jpg" alt="" height="240px" width="360px"/>
+                        <img class="final-image" src="{{img5}}" alt="" height="240px" width="360px"/>
                     </div>
                 </div>
                 </div>
