--- a/static/imgselect.css
+++ b/static/imgselect.css
@@ -68,8 +68,8 @@ img{
 input, button{
     height: 7vh;
     border-radius: 20px;
-    margin: 1vh;
     border-width: 0;
+    margin: 1vh;
     font-size: larger;
     width: 45vh;
 }
@@ -86,3 +86,33 @@ input, button{
     padding-left: 3%;
     width: 100vh;
 }
+
+textarea {
+    margin: 1vh;
+    width: 45vh;
+    height: 7vh;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
+    border-image: none;
+    border-radius: 20px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: larger;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+    resize: none;
+  }
+  
+  
+  textarea:focus {
+      background: none repeat scroll 0 0 #FFFFFF;
+      outline-width: 0;
+  }
