--- a/templates/imageselect.html
+++ b/templates/imageselect.html
@@ -29,24 +29,24 @@
             <div class="center">
                 <div class="topimg">
                     <div class="grid-image">
-                        <img class="final-image" id="img0" src="{{img0}}" alt="" height="240px" width="360px" />
+                        <img class="final-image" id="0" src="{{img0}}" alt="" height="240px" width="360px" />
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" id="img1" src="{{img1}}" alt="" height="240px" width="360px" />
+                        <img class="final-image" id="1" src="{{img1}}" alt="" height="240px" width="360px" />
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" id="img2" src="{{img2}}" alt="" height="240px" width="360px"/>
+                        <img class="final-image" id="2" src="{{img2}}" alt="" height="240px" width="360px"/>
                     </div>
                 </div>
                 <div class="btmimg">
                     <div class="grid-image">
-                        <img class="final-image" id="img3" src="{{img3}}" alt="" height="240px" width="360px"/>
+                        <img class="final-image" id="3" src="{{img3}}" alt="" height="240px" width="360px"/>
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" id="img4" src="{{img4}}" alt="" height="240px" width="360px"/>
+                        <img class="final-image" id="4" src="{{img4}}" alt="" height="240px" width="360px"/>
                     </div>
                     <div class="grid-image">
-                        <img class="final-image" id="img5" src="{{img5}}" alt="" height="240px" width="360px"/>
+                        <img class="final-image" id="5" src="{{img5}}" alt="" height="240px" width="360px"/>
                     </div>
                 </div>
                 </div>
